# magnet-ai

./: .commitlintrc.json  .dockerignore  .env.docker.example  .env.example  .gitignore  .gitlab-ci.yml  .prettierignore  .releaserc.json  ALPHA_DIVERGENCE_ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  CUBE_CSS_ARCHITECTURE_ROADMAP.md  DOCUMENTATION_PLUGIN_COMPLETE_SUMMARY.md  DOCUMENTATION_PLUGIN_FINAL_SOLUTION.md  Dockerfile  E2E_LOG_AUDIT.md  GIT_WORKFLOW.md  LICENSE  LOGGING.md  MEETING_NOTES_ARCHITECTURE.md  README.md  REKA_CUBE_COMPONENT_VARIANTS_AUDIT.md  RELEASE_NOTES.md  ROADMAP_AGENTS.md  ROADMAP_FILE_SOURCE.md  ROADMAP_KREUZBERG.md  ROADMAP_LITELLM.md  ROADMAP_SERVER_SIDE_PAGINATION.md  SECURITY.md  TYPOGRAPHY_TOKEN_AUDIT.md  docker-compose-logging.yml  docker-compose.taskiq.yml  docker-compose.yml  event.json  magnet.sh  package-lock.json  package.json
api/: .dockerignore  .env.example  .env.test  .gitignore  .gitignore.plugins  .gitlab-ci.yml  .pylintrc  DOCUMENTATION_PLUGIN_QUICKSTART.md  Dockerfile  EVALUATION_SCHEDULER.md  EXTERNAL_PLUGINS_DEPLOYMENT_GUIDE.md  EXTERNAL_PLUGINS_QUICK_REFERENCE.md  EXTERNAL_PLUGINS_STRATEGY.md  EXTERNAL_PLUGIN_EXAMPLE.md  EXTERNAL_PLUGIN_INSTALL_EXAMPLES.md  EXTERNAL_PLUGIN_PACKAGING.md  EXTERNAL_PLUGIN_QUICKSTART.md  FIXTURES_GUIDE.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  MIGRATION_TO_PLUGINS.md  Makefile  PLUGIN_CONSOLIDATION.md  PLUGIN_DIRECTORY_STRUCTURE.md  PLUGIN_FOLDER_STRUCTURE.md  PLUGIN_SYSTEM.md  PLUGIN_SYSTEM_SUMMARY.md  README.md  README_SQL.md  README_internal.md  ROADMAP_RELIABILITY_PERFORMANCE.md  TODO.md  VECTOR_SIZE_CONFIGURATION.md  VITEPRESS_DYNAMIC_NAV_FIX.md  VITEPRESS_URL_STRUCTURE_FIX.md  check_models.py  docker-compose.yml  example_evaluation_usage.sh  execute_results.json  inspect_asyncmq.py  (+12 more)
api/.husky/: pre-commit
api/config/: logging_config.yaml.example  logging_config_detailed.yaml
api/examples/: curl_scheduler_examples.sh  scheduler_evaluation_examples.py
api/pg/: acrchitecture.md  progress.md  prompt.md
api/pg/entities/agent_conversation/: agent_conversation.md
api/pg/entities/agents/: agent.md
api/pg/entities/ai_app/: ai_app.sql
api/pg/entities/api_tools/: api_tools.md
api/pg/entities/collections/: collections.md
api/pg/entities/evaluation_sets/: evaluation_sets.md  evaluation_sets.sql
api/pg/entities/evaluations/: evaluations.md
api/pg/entities/jobs/: jobs.md
api/pg/entities/metrics/: metrics.md
api/pg/entities/observations/: observations.md
api/pg/entities/prompts/: prompts.md
api/reports/: .gitignore
api/scripts/: aggregate_reports.py  analyze_recent_traces.py  analyze_results.py  analyze_trace_errors.py  bootstrap_superuser.py  check_null_content.py  check_response_formats.py  check_rf_raw.py  check_trace_status.py  check_variant_keys.py  cosmos_db_clone_db.py  cosmos_db_create_index.py  debug_trace_mismatch.py  deep_trace_analysis.py  download_static_files.py  dump_note_taker_settings_ts.py  ensure_database.py  execute_prompt_templates.py  query_trace_errors.py  seed_dev_fixtures.py  setup.py  validate_prompt_templates.py
api/scripts/sql/: init-pgvector.sql  oracle_db_init.sql
api/src/: app.py  models.py
api/src/api/: tags.py
api/src/config/: api_tool_providers.py  auth.py  config.py  providers.py
api/src/core/: exceptions.py
api/src/core/config/: app.py  base.py  constants.py
api/src/core/db/: connection_manager.py  engine_factory.py  monitoring.py  rls_context.py  session.py  sync_engine.py  types.py
api/src/core/fixtures/: __init__.py  loader.py
api/src/core/plugins/: __init__.py  base.py  interfaces.py  (+2 more)
api/src/data_sources/: data_source.py
api/src/data_sync/: data_processor.py  models.py  synchronizer.py  utils.py
api/src/guards/: access.py  permissions.py  role.py  scope.py
api/src/logger/: database_logging.py  utils.py
api/src/mcp_server/: __init__.py  asgi_mount.py  auth_provider.py  pending_state.py  server.py
api/src/middlewares/: auth.py  csrf.py  database_error.py  rate_limit.py  request_id.py  security_headers.py
api/src/observability/: azure_insight.py  event_logger.py  utils.py
api/src/open_ai/: models.py  oci_embedding.py  utils_new.py
api/src/openai_model/: utils.py
api/src/prompt_templates/: prompt_templates.py
api/src/routes/: __init__.py  auth.py  auth_v2.py  local_auth.py  mfa.py  oauth.py  static.py
api/src/scheduler/: __init__.py  asyncio_executor.py  decorators.py  executors.py  flows.py  job_executor.py  manager.py  settings.py  store.py  types.py  utils.py
api/src/scripts/: fix_jsonb_strings.py
api/src/services/: file_cleanup.py  flow_retrieval_execute.py  flow_retrieval_test.py  generate.py  get_chat_completion_answer.py  language.py  rerank.py  retrieve.py  transfer.py
api/src/storage/: __init__.py  backends.py  config.py  gc.py  lifecycle.py  limits.py  mime_validation.py  models.py  resolver.py  service.py
api/src/stores/: __init__.py  database_client.py  document_store.py  registry.py  utils.py  vector_store.py
api/src/tasks/: __init__.py  admin_ops.py  broker.py  cron.py  dependencies.py  logging_setup.py  schedule_source.py  scheduler.py  status.py  types.py  worker_lifecycle.py
api/src/templates/: callback.html
api/src/type_defs/: pagination.py
api/src/utils/: common.py  cookies.py  datetime_utils.py  http_client.py  jsonb_serializer.py  pagination_utils.py  print_test.py  search_utils.py  secrets.py  serializer.py  upload_handler.py
api/src/validation/: rag_tools.py  retrieval_tools.py
api/tests/: conftest.py
api/tests/e2e/: test_error_handling.py  test_health.py  test_openapi.py
api/tests/factories/: __init__.py  agents.py  ai_models.py  api_keys.py  base.py  collections.py  evaluations.py  jobs.py  knowledge_graph.py  mcp_servers.py  prompts.py  providers.py  users.py
api/tests/fuzz/: conftest.py  test_api_fuzz.py
api/tests/load/: locustfile.py
api/tests/services/: test_knowledge_sources_security.py
api/tests/stores/: test_metadata_filter_builders.py
api/tests/unit/: test_filter_object_security.py  test_mime_validation.py  test_scheduler_utils.py
(+1938 files in other folders)
